--- a/style.css
+++ b/style.css
@@ -318,8 +318,8 @@ header {
     
     .movies-grid {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 30px;
+        grid-template-columns: repeat(3, 3fr);
+        gap: 50px;
     }
     
     .movie-card {
@@ -594,10 +594,63 @@ header {
         filter: grayscale(0%) brightness(1);
     }
     
-    @media (max-width: 768px) {
+    @media (max-width: 668px) {
+        body {
+            overflow-x: hidden;
+        }
+        header {
+            background-image: url(Imagens/principal.png);
+            background-size: cover;
+            background-repeat: no-repeat;
+            .logo {
+                width: 95px;
+                height: 95px;
+                margin: auto;
+            }
+        }
+
+        .login-container {
+            margin: auto;
+        }
+        .toggle-container {
+            width: 155px;
+            height: 40px;
+            margin-top: 35px;  
+
+            .toggle-option {
+                font-size: 0.7rem;
+            }
+        }
+        .title-card {
+            font-size: 1.9rem;
+            text-align: center;
+            margin-left: 100px;
+        }
+        .plans-container {
+            max-width: 500px;
+            margin-left: 30px;
+            
+        }
+        .showcase-header {
+            h1 {
+                font-size: 2rem;
+            }
+            p{
+                font-size: 1rem;
+            }
+        }
+         .movies-grid {
+            display: inline;
+            
+            
+         }
+         .movie-card {
+            margin-top: 40px;
+            width: 95%;
+         }
         .footer-container {
             grid-template-columns: 1fr;
-            gap: 30px;
+            gap: 10px;
         }
         
         .footer-logo {
