--- a/style.css
+++ b/style.css
@@ -594,7 +594,7 @@ header {
         filter: grayscale(0%) brightness(1);
     }
     
-    @media (max-width: 668px) {
+    @media (max-width: 768px) {
         body {
             overflow-x: hidden;
         }
@@ -630,6 +630,9 @@ header {
             max-width: 500px;
             margin-left: 30px;
             
+        }
+        .movie-title {
+            font-size: 0.5rem;
         }
         .showcase-header {
             h1 {
