--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ body {
     
 }
 header {
-    background-image: url(/Imagens/principal.png);    
-    height: 700px;
+    background-image: url(/Imagens/principal.png);
+    width: 100%;    
+    height: 750px;
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -26,7 +27,7 @@ header {
         position: fixed;
         top: 0;
         left: 0;
-        z-index: 1000;
+        z-index: 2;
         
 
         
@@ -46,6 +47,7 @@ header {
         align-content: center;
         justify-content: center;
         height: 400px;
+        width: 1000px;
         background-color: rgba(0, 0, 0, 0.437);
         padding: 30px;
         border-radius: 10px;
@@ -286,12 +288,13 @@ header {
 
     .streaming-showcase {
         width: 90%;
+        height: 500px;
         padding: 40px;
-        margin-top: 90px;
+        margin-top: 250px;
         border-radius: 15px;
         box-shadow: 0 25px 50px rgba(0, 0, 0, 0);
         position: relative;
-        overflow: hidden;
+        
     }
     
     .showcase-header {
@@ -601,6 +604,7 @@ header {
     @media (max-width: 768px) {
         body {
             overflow-x: hidden;
+            background: linear-gradient(to bottom, #000000, #211f1f) no-repeat fixed;
         }
         header {
             background-image: url(Imagens/principal.png);
@@ -615,6 +619,7 @@ header {
 
         .login-container {
             margin: auto;
+            width: 260px;
         }
         .toggle-container {
             width: 155px;
@@ -631,8 +636,9 @@ header {
             margin-left: 100px;
         }
         .plans-container {
-            max-width: 500px;
-            margin-left: 30px;
+            max-width: 250px;
+            margin-left: 130px;
+        
             
         }
         .movie-title {
@@ -653,7 +659,17 @@ header {
          }
          .movie-card {
             margin-top: 40px;
-            width: 95%;
+            width: 90%;
+         }
+
+         .streaming-showcase {       
+            height: 100%;
+            margin-top: 50px;
+            
+            
+         }
+         .streaming-footer {
+            margin-top: 650px;
          }
         .footer-container {
             grid-template-columns: 1fr;
@@ -662,6 +678,9 @@ header {
         
         .footer-logo {
             grid-column: 1;
+        }
+        .newsletter-form input {
+            width: 92%;
         }
     }
     
